Minor spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ section.reviews {
   .max-width-wrapper {
     margin: auto;
     padding: 64px;
-    max-width: 1100px;
+    max-width: 1300px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -171,19 +171,23 @@ section.reviews {
   .reviews {
     margin-top: 1.5rem;
     display: flex;
-    gap: 1.5rem;
+    gap: 1.75rem;
     grid-column: 1/3;
     grid-row: 2;
     height: fit-content;
   }
 
+  .review {
+    padding: 1.75rem 1.5rem;
+  }
+
   .review.two {
     position: relative;
-    top: 1rem;
+    top: 1.5rem;
   }
 
   .review.three {
     position: relative;
-    top: 2rem;
+    top: 3rem;
   }
 }
